--- a/src/style/responsiveTable.css
+++ b/src/style/responsiveTable.css
@@ -6,15 +6,21 @@ body {
 table {
   border: 1px solid #ccc;
   border-collapse: collapse;
-  margin: 0;
+  margin: 2em;
   padding: 0;
-  width: 100%;
+  width: 91%;
   table-layout: fixed;
 }
 
 table caption {
   font-size: 1.5em;
   margin: .5em 0 .75em;
+  text-align: left;
+}
+
+table caption input {
+  font-size: 1.5em;
+  margin: .5em 0 .25em;
   text-align: left;
 }
 
