--- a/src/style/responsiveTable.css
+++ b/src/style/responsiveTable.css
@@ -43,6 +43,10 @@ table th {
   
 }
 
+.titleCaption {
+  background-color: lightblue;
+}
+
 @media screen and (max-width: 600px) {
   table {
     border: 0;
