--- a/src/style/responsiveTable.css
+++ b/src/style/responsiveTable.css
@@ -6,7 +6,7 @@ body {
 table {
   border: 1px solid #ccc;
   border-collapse: collapse;
-  margin: 2em;
+  margin:  2em 2em 2em 2em;
   padding: 0;
   width: 91%;
   table-layout: fixed;
